[gd_scene format=3 uid="uid://4m30gbwn4h8h"]

[ext_resource type="Script" uid="uid://1tl6csya2jn7" path="res://Scripts/Player.gd" id="1_rpqav"]
[ext_resource type="Texture2D" uid="uid://dy78iwbxc5pp8" path="res://unnamed.webp" id="2_gntrk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kpjcp"]
radius = 52.03845

[sub_resource type="AtlasTexture" id="AtlasTexture_kyqiw"]
atlas = ExtResource("2_gntrk")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gntrk"]
atlas = ExtResource("2_gntrk")
region = Rect2(64, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dewec"]
atlas = ExtResource("2_gntrk")
region = Rect2(64, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ixxa"]
atlas = ExtResource("2_gntrk")
region = Rect2(64, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn08x"]
atlas = ExtResource("2_gntrk")
region = Rect2(112, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_52ee3"]
atlas = ExtResource("2_gntrk")
region = Rect2(112, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhhdu"]
atlas = ExtResource("2_gntrk")
region = Rect2(112, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_megsn"]
atlas = ExtResource("2_gntrk")
region = Rect2(112, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0x7a"]
atlas = ExtResource("2_gntrk")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v66d"]
atlas = ExtResource("2_gntrk")
region = Rect2(80, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x63xi"]
atlas = ExtResource("2_gntrk")
region = Rect2(80, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2e8t"]
atlas = ExtResource("2_gntrk")
region = Rect2(80, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yoq75"]
atlas = ExtResource("2_gntrk")
region = Rect2(96, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksbbd"]
atlas = ExtResource("2_gntrk")
region = Rect2(96, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_glx4g"]
atlas = ExtResource("2_gntrk")
region = Rect2(96, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_miouo"]
atlas = ExtResource("2_gntrk")
region = Rect2(96, 96, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rpqav"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyqiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gntrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dewec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ixxa")
}],
"loop": true,
"name": &"Down",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"DownLeft",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"DownRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn08x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52ee3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhhdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_megsn")
}],
"loop": true,
"name": &"Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0x7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v66d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x63xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2e8t")
}],
"loop": true,
"name": &"Right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yoq75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksbbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glx4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miouo")
}],
"loop": true,
"name": &"Up",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"UpLeft",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"UpRight",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kyqiw"]
radius = 102.044106

[node name="CharacterBody2D" type="CharacterBody2D" unique_id=545131653]
script = ExtResource("1_rpqav")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1149845236]
shape = SubResource("CircleShape2D_kpjcp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1902985526]
texture_filter = 1
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_rpqav")
animation = &"UpRight"

[node name="Dodge_Timer" type="Timer" parent="." unique_id=2078185050]
wait_time = 0.5

[node name="Dodge_Cooldown" type="Timer" parent="." unique_id=2000547627]
wait_time = 0.7

[node name="Interaction_Range" type="Area2D" parent="." unique_id=1513192852]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction_Range" unique_id=1346057077]
shape = SubResource("CircleShape2D_kyqiw")

[connection signal="timeout" from="Dodge_Timer" to="." method="_on_dodge_timer_timeout"]
[connection signal="timeout" from="Dodge_Cooldown" to="." method="_on_dodge_cooldown_timeout"]
[connection signal="body_entered" from="Interaction_Range" to="." method="_on_interaction_range_body_entered"]
[connection signal="body_exited" from="Interaction_Range" to="." method="_on_interaction_range_body_exited"]
